# ASAE-Route-Problem

./: .gitignore  .ninja_deps  .ninja_log  ASAEinspectionRoute  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  build.ninja  cmake_install.cmake  main.cpp
cmake-3.20.2/: CMakeCPackOptions.cmake  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cmake_uninstall.cmake  install_manifest.txt
cmake-3.20.2/Auxiliary/: CTestTestfile.cmake
cmake-3.20.2/Auxiliary/bash-completion/: CTestTestfile.cmake
cmake-3.20.2/Bootstrap.cmk/: InitialCacheFlags.cmake  cmConfigure.h
cmake-3.20.2/Bootstrap.cmk/cmsys/: Configure.h  Configure.hxx
cmake-3.20.2/Source/: CTestTestfile.cmake
cmake-3.20.2/Source/CursesDialog/: CTestTestfile.cmake
cmake-3.20.2/Source/kwsys/: CTestTestfile.cmake  cmsysTestProcess  cmsysTestSharedForward  cmsysTestsC  cmsysTestsCxx  testConsoleBufChild  testSharedForward.c  testSystemTools.h
cmake-3.20.2/Testing/CoberturaCoverage/: DartConfiguration.tcl
cmake-3.20.2/Testing/DelphiCoverage/: DartConfiguration.tcl
cmake-3.20.2/Testing/JacocoCoverage/: DartConfiguration.tcl
cmake-3.20.2/Testing/JavascriptCoverage/: DartConfiguration.tcl  output.json
cmake-3.20.2/Testing/MumpsCacheCoverage/: DartConfiguration.tcl
cmake-3.20.2/Testing/MumpsCoverage/: DartConfiguration.tcl  gtm_coverage.mcov
cmake-3.20.2/Testing/PythonCoverage/: DartConfiguration.tcl
cmake-3.20.2/Tests/: CMakeBuildDoubleProjectTest.cmake  CMakeBuildTest.cmake  CTestTestfile.cmake  CTestUpdateGIT.cmake  EnforceConfig.cmake
cmake-3.20.2/Tests/CMakeLib/: CTestTestfile.cmake  runcompilecommands  testAffinity  testEncoding  testUVProcessChainHelper  testXMLParser.h
cmake-3.20.2/Tests/CMakeOnly/: CTestTestfile.cmake  Test.cmake
cmake-3.20.2/Tests/CMakeTests/: CMakeHostSystemInformationTest.cmake  CMakeMinimumRequiredTest.cmake  CTestTestfile.cmake  CompilerIdVendorTest.cmake  EndStuffTest.cmake  FileDownloadBadHashTest.cmake  FileDownloadTest.cmake  FileTest.cmake  FileUploadTest.cmake  (+7 more)
cmake-3.20.2/Utilities/: CTestTestfile.cmake
dataset/: distances2.csv  establishments.csv  establishments2.csv
docs/output/: Doxyfile
src/: ASAE  ASAE.cpp  ASAE.h  Menu.cpp  Menu.h  STCP.cpp  STCP.h  graph.py  plot.cpp  plot.h
src/graph/: Time.cpp  Time.h  graph.cpp  graph.h  minHeap.h
src/matplot/: geoplot_draw.cpp  geoplot_draw.h
(+290 files in other folders)
